--- a/Website/style.css
+++ b/Website/style.css
@@ -1,35 +1,42 @@
+body{
 
+        background: linear-gradient(to bottom, #ffffff 0%, #000000 200%);
+    
+}
 
     header{
         text-align: center;
         padding: 20px;
     }
 
+   
+
     .element{
         position: relative;
-        bottom: 50px;
-        left: 32px;
+        bottom: 80px;
+        left: 0px;
         color: black;
         font-size: 2.5em;
-        width: 373px;
+        width: 366px;
         text-align: center;
-        background: rgba(205, 199, 202, 0.8) 
+        background: rgba(205, 199, 202, 0.8);
+        display:block;
+        margin: 0 auto;
     }
 
     img{
-        text-align: center;
-        margin-bottom: -30px;
-        margin-left: 20px;
-    
+      display:block;
+      margin: 0 auto;
+
     }
 
 a img{
-    width: 397px;
-    height: 240px;
+    width: 390px;
+    height: 233px;
     padding: 10px;
     border-radius: 20px;
     border: black 2px solid;
-    
+    text-align: center;
 }
 
 button img{
@@ -39,7 +46,7 @@ button img{
     
 }
 .christmasButtonOne{
-    margin: -10px;
+    /* margin: -10px; */
     height: 40px;
     width: 60px;
     background-size: contain;
@@ -87,7 +94,7 @@ li{
 }
 
 .changing_img{
-    padding: 5px;
+    /* padding: 5px; */
     border-radius: 10px;
 
 }
@@ -97,7 +104,7 @@ li{
 
 .button-area{
     text-align: center;
-    margin: 5px;
+    /* margin: 5px; */
 }
 button{
     /* padding: 8px 30px; */
