--- a/Website/STYLES/index-style.css
+++ b/Website/STYLES/index-style.css
@@ -1,59 +1,61 @@
 .cont{
-    background-color: rgb(236, 236, 236);
+    background: rgb(255,255,255);
+background: linear-gradient(0deg, rgba(255,255,255,0.9782084569732937) 83%, rgba(236,234,234,1) 95%);
+    
+}
+.title-row{
+    padding-bottom: 2vh;
 }
 
-.image-row{
-    background-color: rgb(236, 236, 236);
-}
+
 
 .select{
     text-align: center;
     font-family: 'Licorice', cursive;
     color: rgb(255, 255, 255);
     font-size: 6rem; 
-    text-shadow: 1px 1px 3px rgb(165, 165, 165), 0 0 25px rgb(165, 165, 165), 0 0 3px rgb(165, 165, 165);
+    text-shadow: 1px 1px 3px rgb(124, 123, 123), 0 0 25px rgb(165, 165, 165), 0 0 3px rgb(165, 165, 165);
 }
 
-.image-div{
-    padding-top: 10px;
+@media only screen and (max-width: 600px){
+    .image-div{
+    padding-bottom: 100px;
     height: 480px;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(255, 255, 255);
 }
+}
+
 
 .image-div img{
     display: block;
     margin: auto;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     opacity: 0.85;
     box-shadow: rgba(50, 50, 93, 0.4) 0px 30px 60px -12px, rgba(0, 0, 0, 0.4) 0px 18px 36px -18px;
 }
 
 .image-div p{
+    text-align: center;
     font-size: 35px;
     margin-top: -50px;
+    bottom: 0;
     opacity: 1;
-}
-
-.image-div p:hover{
-    font-size: 35px;
-    margin-top: -40px;
-    opacity: 1;
-    color: rgb(78, 78, 78);
 }
 
 
 .image-div img:hover{
     height: 102%;
-    object-fit: cover;
+    object-fit: contain;
     opacity: 1;
     box-shadow: none;
 }
 
 .image-div img:active{
-    height: 101%;
-    width: 101%;
+    margin: auto;
+    height: 95%;
+    width: 95%;
     object-fit: contain;
     opacity: 1;
 }
