--- a/Website/STYLES/christmas-style.css
+++ b/Website/STYLES/christmas-style.css
@@ -41,7 +41,7 @@ html, body{
     height: 40px;
     width: 60px;
     background-size: cover;
-    background-image: url(../IMAGES/CHRISTMAS-IMG/xmass1.png);
+    background-image: url(../IMAGES/CHRISTMAS-IMG/xmass1.png); 
 }
 .christmasButtonTwo{
     height: 40px;
@@ -161,6 +161,14 @@ li{
     padding-top: 20px;
     background: rgb(41,41,41);
     background: radial-gradient(circle, rgba(41,41,41,1) 36%, rgba(104,104,104,1) 46%, rgba(174,174,174,1) 66%, rgba(216,216,216,1) 83%, rgba(255,255,255,1) 100%);
+}
+
+.left-view{
+display: box;
+float: right;
+margin-top: 48px;
+margin-right: 30px;
+
 }
 
 .frame{
