--- a/Website/STYLES/birthday-style.css
+++ b/Website/STYLES/birthday-style.css
@@ -83,6 +83,7 @@ li{
 
 .changing_img{
     padding: 5px;
+    padding-top: 2vh;
     border-radius: 10px;
     width: 45%;
 }
@@ -248,7 +249,7 @@ li{
 
     #text-div{
         height: 80%;
-        margin-top: 5vh;
+        margin-top: 4vh;
         font-size: 2vw;
     }
 
