--- a/Website/STYLES/vacation-style.css
+++ b/Website/STYLES/vacation-style.css
@@ -83,6 +83,7 @@ li{
 
 .changing_img{
     padding: 5px;
+    padding-top: 2vh;
     border-radius: 10px;
     width: 45%;
 }
@@ -236,7 +237,7 @@ li{
       font-family: 'Great Vibes', cursive;
       font-weight: bold;
       width: 75%;
-      height:100%;
+      height: 100%;
         background-color: rgba(255, 255, 255, 0.2);
         resize:none;
         border: none;
@@ -248,7 +249,7 @@ li{
 
     #text-div{
         height: 80%;
-        margin-top: 5vh;
+        margin-top: 4vh;
         font-size: 2vw;
     }
 
